# readit

./: .gitignore  manage.py  pyproject.toml  requirements.txt
readit/: asgi.py  settings.py  urls.py  wsgi.py
readit_api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
readit_api/migrations/: 0001_initial.py  0002_post.py  0003_alter_post_options.py  0004_alter_subreadit_name.py
readit_web/: .editorconfig  README.md  angular.json  package-lock.json  package.json
readit_web/src/: index.html  styles.less
readit_web/src/app/: api-util.ts  app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  post.service.ts  post.ts  subreadit.ts  token-inject.interceptor.spec.ts  token-inject.interceptor.ts  util.ts
readit_web/src/app/post-list/: post-list.component.html  post-list.component.less  post-list.component.ts
readit_web/src/app/posts/: post.service.ts  post.ts
readit_web/src/app/subreadit-list/: subreadit-list.component.html  subreadit-list.component.spec.ts  subreadit-list.component.ts
readit_web/src/app/subreadits/: subreadit.service.spec.ts  subreadit.service.ts  subreadit.ts
readit_web/src/app/user-auth/: user-auth.service.ts  user-auth.ts
readit_web/src/app/user-home/: user-home.component.html  user-home.component.less  user-home.component.ts
readit_web/src/app/user-profile/: user-detail.ts  user-profile.component.html  user-profile.component.less  user-profile.component.ts
readit_web/src/app/utils/: as-subreadit.pipe.spec.ts  as-subreadit.pipe.ts  as-username.pipe.spec.ts  (+3 more)
(+19 files in other folders)
