[tool.poetry]
name = "readit"
version = "0.1.0"
description = "A Reddit Clone built using Django and Angular"
authors = ["Rudolph Almeida <rudolf1.almeida@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.4"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.2.0"
django-rest-knox = "^4.2.0"
channels = {extras = ["daphne"], version = "^4.0.0"}

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"
ruff = "^0.0.289"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
